[tool.poetry]
name = "pywsitest"
version = "0.3.4"
description = "PYthon WebSocket Integration TESTing framework"
authors = ["Grid Smarter Cities"]
license = "MIT"
readme = "README.md"
keywords = ["websocket integration test testing"]
classifiers=[
      "Intended Audience :: Developers",
      "Development Status :: 3 - Alpha",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
      "Natural Language :: English"
  ]
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
websockets = "^9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
